Spring constant pool